Fixed overlapping header

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -1,4 +1,5 @@
 #header {
+    background: #283B61;
     border-bottom: 5px solid #7d8ca9;
     height: 50px;
     min-width: 981px;
